[package]
name = "belajar-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
async-trait = "0.1.81"
derive_more = {version = "1.0.0",features = ["full"]}
json = "0.12.4"
serde = {version = "1.0.208", features = ["derive"]}
surrealdb = "1.5.4"
uuid = "1.10.0"
validator ={ version = "0.18.1",features = ["derive"] }
